8287217: C2: PhaseCCP: remove not visited nodes, prevent type inconsistency